database/force-app/default/objects/Event__c/fields/Checked_In_Volunteers__c.field-meta.xml
<CustomField>
    <fullName>Checked_In_Volunteers__c</fullName>
    <label>Checked In Volunteers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>