database/force-app/default/objects/Event__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Created By</label>
    <referenceTo>Volunteer__c</referenceTo>
    <relationshipLabel>Created By (Event)</relationshipLabel>
    <relationshipName>EventCreatedBy</relationshipName>
    <type>Lookup</type>
</CustomField>