database/force-app/default/objects/Event__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <label>Event Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>