database/force-app/default/objects/Event__c/fields/Event_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Time__c</fullName>
    <label>Event Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>