database/force-app/default/objects/Event__c/fields/Image_1_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_1_URL__c</fullName>
    <label>Image 1 URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>