database/force-app/default/objects/Event__c/fields/Max_Volunteers__c.field-meta.xml
<CustomField>
    <fullName>Max_Volunteers__c</fullName>
    <label>Max Volunteers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>