database/force-app/default/objects/Event__c/fields/Registered_Volunteers__c.field-meta.xml
<CustomField>
    <fullName>Registered_Volunteers__c</fullName>
    <label>Registered Volunteers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>